--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             Player <span class="display-player playerX">X</span>'s turn
         </section>
         <section class="container">
-            <div class="tile1"></div>
+            <div class="tile"></div>
             <div class="tile"></div>
             <div class="tile"></div>
             <div class="tile"></div>
