--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <section class="controls">
             <button id="reset">Reset</button>
         </section>
-        <section class="footer">
+        <footer class="footer">
             <h3>&copy; Mrhappyehere</h3>
-        </section>
+        </footer>
     </main>
 </body>
 
